# rpm-project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: .env  .env.example  logging_conf.yml  settings.py
consumer/: __main__.py  app.py  logger.py  web_app.py
consumer/handlers/: form.py
consumer/model/: __init__.py  user.py
consumer/schema/: form.py  recommendation.py
consumer/storage/: db.py
migrations/: env.py
migrations/versions/: 1b67627da56e_.py  c8ac2914d529_initialize_tables.py  cfd365ecf334_.py
minio/data/.minio.sys/: format.json
model/: __init__.py  meta.py  user.py
postgres_db/model/: user.py
recommend_system/: chroma.py  sbert.py
scripts/: migrate.py  migrate.sh
src/: app.py  bot.py  config.py  consts.py  logger.py
src/api/tg/: tg.py  webhook.py
src/handlers/: buttons.py
src/handlers/command/: __init__.py  auth.py  start.py
src/handlers/message/: __init__.py  recommend.py  router.py
src/handlers/middleware/: auth.py
src/handlers/states/: auth.py  recommend.py
src/model/: db_main.py
src/services/: minio_service.py
src/storage/: db.py  rabbit.py  redis.py
src/utils/: recommendations.py  validators.py
storage/: consts.py  db.py  rabbit.py
