[tool.poetry]
name = "rpm-project"
version = "0.1.0"
description = ""
package-mode = false
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
aiogram = "^3.13.1"
pydantic-settings = "^2.6.0"
redis = "^5.2.0"
hiredis = "^3.0.0"
aio-pika = "^9.4.3"
msgpack = "^1.1.0"
orjson = "^3.10.12"
transformers = "^4.46.3"
chromadb = "^0.5.20"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
