[tool.poetry]
name = "rpm-project"
version = "0.1.0"
description = ""
package-mode = false
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
aiogram = "^3.13.1"
pydantic-settings = "^2.6.0"
redis = "^5.2.0"
hiredis = "^3.0.0"
aio-pika = "^9.4.3"
starlette-context = "^0.3.6"
uvicorn = "^0.32.1"
msgpack = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
