[tool.poetry]
name = "rpm-project"
version = "0.1.0"
description = ""
package-mode = false
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
aiogram = "^3.13.1"
pydantic-settings = "^2.6.0"
redis = "^5.2.0"
hiredis = "^3.0.0"
aio-pika = "^9.4.3"
starlette-context = "^0.3.6"
uvicorn = "^0.32.1"
msgpack = "^1.1.0"
orjson = "^3.10.12"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
minio = "^7.2.12"
aiobotocore = "^2.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
